client testimonial workplace fix color contrast

--- a/style/_article.scss
+++ b/style/_article.scss
@@ -31,7 +31,8 @@ article {
 
             small {
                 font-size: 12px;
-                color: #828282;
+                // color: #828282;
+                color: #595959;
             }
         }
     }
