--- a/style/style.css
+++ b/style/style.css
@@ -615,7 +615,7 @@ article .person .name_job p {
 }
 article .person .name_job small {
   font-size: 12px;
-  color: #828282;
+  color: #595959;
 }
 
 @media screen and (min-width: 1024px) {
